--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express-handlebars": "^5.3.2",
     "express-session": "^1.17.1",
     "handlebars": "^4.7.7",
+    "jquery": "^3.6.0",
+    "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.2"
   },
